[package]
name = "g13"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"
description = "libusb based crate to communicate with a Logitech G13 without accompanying drivers."
repository = "https://github.com/maxjoehnk/g13-rs"
license = "MIT"

[dependencies]
rusb = "0.9"
thiserror = "1"
bitflags = "1.3"
log = "0.4"
